# poetry-contrib-demo-tox

./: .pre-commit-config.yaml  pyproject.toml  tox.ini
.github/workflows/: main.yml
tests/: test_example.py
